add missing deps

--- a/dist.ini
+++ b/dist.ini
@@ -39,6 +39,8 @@ File::chdir=0
 ; for runtime
 perl                          = 5.010000
 ;   to express which version of spec we're following
+Log::Any=0
+Log::Any::App=0
 Sub::Spec=0.14
 Sub::Spec::CmdLine=0
 Digest::MD5=0
