dzil: fix dist name

--- a/dist.ini
+++ b/dist.ini
@@ -1,12 +1,12 @@
-name    = App-UniqFile
+name    = App-UniqFiles
 version = 0.02
 author  = Steven Haryanto <stevenharyanto@gmail.com>
 license = Perl_5
 copyright_holder = Steven Haryanto
 
 [MetaResources]
-homepage    = http://search.cpan.org/dist/App-UniqFile/
-repository  = http://github.com/sharyanto/perl-App-UniqFile
+homepage    = http://search.cpan.org/dist/App-UniqFiles/
+repository  = http://github.com/sharyanto/perl-App-UniqFiles
 
 [@Filter]
 bundle = @Classic
