--- a/dist.ini
+++ b/dist.ini
@@ -21,7 +21,7 @@ remove = PkgVersion
 [PodWeaver]
 [CheckChangeLog]
 
-[CompileTests]
+[Test::Compile]
 [InstallRelease]
 install_command = cpanm -n .
 ;[Twitter]
