Replace Sub::Spec with Perinci

--- a/dist.ini
+++ b/dist.ini
@@ -31,19 +31,20 @@ install_command = cpanm -n .
 ;[@Git]
 
 [Prereqs]
-; for testing
+;spec
+Rinci=1.1.0
+
+;testing
 Test::More                    = 0.96
 File::Slurp=0
 File::chdir=0
 
-; for runtime
+;runtime
 perl                          = 5.010000
-;   to express which version of spec we're following
+Digest::MD5=0
 Log::Any=0
 Log::Any::App=0
-Sub::Spec=0.14
-Sub::Spec::CmdLine=0
-Digest::MD5=0
+Perinci::CmdLine=0
 
 [Run::Release]
 ;notexist_fatal = 0
