dzil: Pass lint-prereqs

--- a/dist.ini
+++ b/dist.ini
@@ -1,5 +1,6 @@
-name    = App-UniqFiles
 version = 0.05
+
+name    = App-UniqFiles
 author  = Steven Haryanto <stevenharyanto@gmail.com>
 license = Perl_5
 copyright_holder = Steven Haryanto
@@ -8,44 +9,17 @@ copyright_holder = Steven Haryanto
 homepage    = http://search.cpan.org/dist/App-UniqFiles/
 repository  = http://github.com/sharyanto/perl-App-UniqFiles
 
-[@Filter]
-bundle = @Classic
-remove = MakeMaker
-remove = PodVersion
-remove = PkgVersion
+[@SHARYANTO]
 
-[OurPkgVersion]
-[ModuleBuild]
-
-[ReadmeFromPod]
-[PodWeaver]
-[CheckChangeLog]
-
-[Test::Compile]
-[InstallRelease]
-install_command = cpanm -n .
-;[Twitter]
-;hash_tags = #perl #cpan #orgmode #emacs
-;url_shortener = Metamark
-
-;[@Git]
+[Prereqs / TestRequires]
+Test::More                    = 0.96
 
 [Prereqs]
-;spec
+;!lint-prereqs assume-used # spec
 Rinci=1.1.0
 
-;testing
-Test::More                    = 0.96
+perl=5.010001
 File::Slurp=0
 File::chdir=0
-
-;runtime
-perl                          = 5.010000
-Digest::MD5=0
 Log::Any=0
-Log::Any::App=0
 Perinci::CmdLine=0
-
-[Run::Release]
-;notexist_fatal = 0
-run = archive-perl-release %s
