dist: dzil: Force @SHARYANTO version (inspired by chorny)

--- a/dist.ini
+++ b/dist.ini
@@ -10,6 +10,7 @@ homepage    = http://search.cpan.org/dist/App-UniqFiles/
 repository  = http://github.com/sharyanto/perl-App-UniqFiles
 
 [@SHARYANTO]
+:version=0.09
 
 [Prereqs / TestRequires]
 Test::More=0.98
