--- a/dist.ini
+++ b/dist.ini
@@ -9,7 +9,7 @@ copyright_holder = Steven Haryanto
 homepage    = http://search.cpan.org/dist/App-UniqFiles/
 repository  = http://github.com/sharyanto/perl-App-UniqFiles
 
-[@SHARYANTO]
+[@Author::SHARYANTO]
 :version=0.09
 
 [Prereqs / TestRequires]
