--- a/dist.ini
+++ b/dist.ini
@@ -5,14 +5,11 @@ author  = Steven Haryanto <stevenharyanto@gmail.com>
 license = Perl_5
 copyright_holder = Steven Haryanto
 
-[MetaResources]
-
-
-
 [@Author::SHARYANTO]
 :version=0.23
 
 [Prereqs / TestRequires]
+File::Slurp::Tiny=0
 Test::More=0.98
 
 [Prereqs]
@@ -20,7 +17,6 @@ Test::More=0.98
 Rinci=1.1.0
 
 perl=5.010001
-File::Slurp=0
 File::chdir=0
 Log::Any=0
 Perinci::CmdLine=0
