--- a/dist.ini
+++ b/dist.ini
@@ -1,14 +1,11 @@
 version = 0.08
 
 name    = App-UniqFiles
-author  = Steven Haryanto <stevenharyanto@gmail.com>
-license = Perl_5
-copyright_holder = Steven Haryanto
 
 [Rinci::ScriptFromFunc]
 script= func=/App/UniqFiles/uniq_files, prefer_lite=1
 
-[@Author::SHARYANTO]
+[@Author::PERLANCAR]
 :version=0.23
 
 [Prereqs / TestRequires]
