[dzil] prefer_lite is now the default with Perinci::CmdLine::Any 0.09

--- a/dist.ini
+++ b/dist.ini
@@ -3,7 +3,7 @@ version = 0.09
 name    = App-UniqFiles
 
 [Rinci::ScriptFromFunc]
-script= func=/App/UniqFiles/uniq_files, prefer_lite=1
+script= func=/App/UniqFiles/uniq_files
 
 [@Author::PERLANCAR]
 :version=0.23
