--- a/dist.ini
+++ b/dist.ini
@@ -2,8 +2,8 @@ version = 0.09
 
 name    = App-UniqFiles
 
-[Rinci::ScriptFromFunc]
-script= func=/App/UniqFiles/uniq_files
+[GenPericmdScript/GenPericmdScript::uniq_files]
+url=/App/UniqFiles/uniq_files
 
 [@Author::PERLANCAR]
 :version=0.23
