--- a/dist.ini
+++ b/dist.ini
@@ -13,9 +13,10 @@ File::Slurp::Tiny=0
 Test::More=0.98
 
 [Prereqs]
-;!lint_prereqs assume-used # spec
-Rinci=1.1.0
-
 perl=5.010001
 File::chdir=0
 Log::Any::IfLOG=0
+
+[Prereqs / DevelopRecommends]
+;!lint_prereqs assume-used # spec
+Rinci=1.1.0
