[dist] Re-pass lint-prereqs (core modules must now be listed)

--- a/dist.ini
+++ b/dist.ini
@@ -10,10 +10,17 @@ url=/App/UniqFiles/uniq_files
 
 [Prereqs / TestRequires]
 File::Slurp::Tiny=0
+File::Temp=0
 Test::More=0.98
 
 [Prereqs]
 perl=5.010001
+
+strict=0
+warnings=0
+
+Digest::MD5=0
+Exporter=0
 File::chdir=0
 Log::Any::IfLOG=0.07
 
