--- a/dist.ini
+++ b/dist.ini
@@ -24,6 +24,5 @@ Exporter=0
 File::chdir=0
 Log::Any::IfLOG=0.07
 
-[Prereqs / DevelopRecommends]
-;!lint_prereqs assume-used # spec
-Rinci=1.1.0
+[Prereqs / DevelopSuggests]
+_SPEC::Rinci=1.1.0
