--- a/dist.ini
+++ b/dist.ini
@@ -24,5 +24,7 @@ Exporter=0
 File::chdir=0
 Log::Any::IfLOG=0.07
 
-[Prereqs / DevelopSuggests]
-_SPEC::Rinci=1.1.0
+[Prereqs / DevelopX_spec]
+-phase=develop
+-relationship=x_spec
+Rinci=1.1.0
