--- a/dist.ini
+++ b/dist.ini
@@ -9,22 +9,21 @@ url=/App/UniqFiles/uniq_files
 
 :version=0.58
 [Prereqs / TestRequires]
+File::chdir=0
 File::Slurp::Tiny=0
 File::Temp=0
 Test::More=0.98
 
 [Prereqs]
 perl=5.010001
-
 strict=0
 warnings=0
-
 Digest::MD5=0
 Exporter=0
-File::chdir=0
-Log::Any::IfLOG=0.07
+Log::ger=0.011
 
 [Prereqs / DevelopX_spec]
 -phase=develop
 -relationship=x_spec
 Rinci=1.1.0
+
