--- a/dist.ini
+++ b/dist.ini
@@ -1,4 +1,4 @@
-version = 0.11
+version = 0.12
 
 name    = App-UniqFiles
 
@@ -10,7 +10,7 @@ url=/App/UniqFiles/uniq_files
 :version=0.58
 [Prereqs / TestRequires]
 File::chdir=0
-File::Slurp::Tiny=0
+File::Slurper=0
 File::Temp=0
 Test::More=0.98
 
