[ux] Simplify CLI: skip reading env & config files

--- a/dist.ini
+++ b/dist.ini
@@ -2,11 +2,14 @@ version = 0.130
 
 name    = App-UniqFiles
 
-[GenPericmdScript/GenPericmdScript::uniq_files]
+[GenPericmdScript/GenPericmdScript uniq_files]
 url=/App/UniqFiles/uniq_files
+read_config=0
+read_env=0
+enable_log=1
 
 [@Author::PERLANCAR]
-:version=0.598
+:version=0.600
 
 [Prereqs / TestRequires]
 File::chdir=0
@@ -20,9 +23,11 @@ strict=0
 warnings=0
 Digest::MD5=0
 Exporter=5.57
-Log::ger=0.027
+File::Find=0
+Log::ger=0.037
 
 [Prereqs / DevelopX_spec]
 -phase=develop
 -relationship=x_spec
 Rinci=1.1.90
+
