--- a/dist.ini
+++ b/dist.ini
@@ -21,8 +21,8 @@ Test::More=0.98
 perl=5.010001
 strict=0
 warnings=0
-Digest::MD5=0
 Exporter=5.57
+File::Digest=0.009
 File::Find=0
 Log::ger=0.037
 
