--- a/dist.ini
+++ b/dist.ini
@@ -1,4 +1,10 @@
-version = 0.132
+;---------------------------------
+author  = perlancar <perlancar@cpan.org>
+copyright_holder = perlancar <perlancar@cpan.org>
+license = Perl_5
+;---------------------------------
+
+version = 0.133
 
 name    = App-UniqFiles
 
@@ -9,7 +15,7 @@ read_env=0
 enable_log=1
 
 [@Author::PERLANCAR]
-:version=0.600
+:version=0.606
 
 [Prereqs / TestRequires]
 File::chdir=0
@@ -24,9 +30,9 @@ warnings=0
 Exporter=5.57
 File::Digest=0.009
 File::Find=0
-Log::ger=0.037
+Log::ger=0.038
 
 [Prereqs / DevelopX_spec]
 -phase=develop
 -relationship=x_spec
-Rinci=1.1.90
+Rinci=1.1.102
