[ux] Add CLI dupe-files with the default of showing duplicate files; add --detail (-l)  as shortcutfor --show-digest --show-size --show-count

--- a/dist.ini
+++ b/dist.ini
@@ -8,7 +8,13 @@ version = 0.133
 
 name    = App-UniqFiles
 
-[GenPericmdScript/GenPericmdScript uniq_files]
+[GenPericmdScript/GenPericmdScript dupe-files]
+url=/App/UniqFiles/dupe_files
+read_config=0
+read_env=0
+enable_log=1
+
+[GenPericmdScript/GenPericmdScript uniq-files]
 url=/App/UniqFiles/uniq_files
 read_config=0
 read_env=0
