--- a/dist.ini
+++ b/dist.ini
@@ -4,7 +4,7 @@ copyright_holder = perlancar <perlancar@cpan.org>
 license = Perl_5
 ;---------------------------------
 
-version = 0.133
+version = 0.134
 
 name    = App-UniqFiles
 
@@ -37,8 +37,10 @@ Exporter=5.57
 File::Digest=0.009
 File::Find=0
 Log::ger=0.038
+Perinci::Sub::Util=0.470
 
 [Prereqs / DevelopX_spec]
 -phase=develop
 -relationship=x_spec
 Rinci=1.1.102
+
