--- a/dist.ini
+++ b/dist.ini
@@ -4,7 +4,7 @@ copyright_holder = perlancar <perlancar@cpan.org>
 license = Perl_5
 ;---------------------------------
 
-version = 0.134
+version = 0.135
 
 name    = App-UniqFiles
 
@@ -33,6 +33,7 @@ Test::More=0.98
 perl=5.010001
 strict=0
 warnings=0
+Cwd=0
 Exporter=5.57
 File::Digest=0.009
 File::Find=0
