--- a/dist.ini
+++ b/dist.ini
@@ -4,7 +4,7 @@ copyright_holder = perlancar <perlancar@cpan.org>
 license = Perl_5
 ;---------------------------------
 
-version = 0.135
+version = 0.136
 
 name    = App-UniqFiles
 
@@ -39,6 +39,7 @@ File::Digest=0.009
 File::Find=0
 Log::ger=0.038
 Perinci::Sub::Util=0.470
+Regexp::Util=0
 
 [Prereqs / DevelopX_spec]
 -phase=develop
